k8s-yml/db.yml
apiVersion: v1
kind: Service
metadata:
  name: user-db-svc
spec:
  selector:
    app: user-db
  ports:
  - port: 3306
    targetPort: 3306
    protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
      - name: user-db-con
        image: 760135347993.dkr.ecr.ap-northeast-2.amazonaws.com/mysql:1
        ports:
        - containerPort: 3306
        
---
apiVersion: v1
kind: Service
metadata:
  name: profile-db-svc
spec:
  selector:
    app: profile-db
  ports:
  - port: 3306
    targetPort: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-db-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-db
  template:
    metadata:
      labels:
        app: profile-db
    spec:
      containers:
      - name: profile-db-con
        image: 760135347993.dkr.ecr.ap-northeast-2.amazonaws.com/mysql
        ports:
        - containerPort: 3306
