k8s-yml/was.yml
apiVersion: v1
kind: Service
metadata:
  name: user-api-svc
spec:
  selector:
    app: user-api
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-api-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-api
  template:
    metadata:
      name: user-api-pod
      labels:
        app: user-api
    spec:
      containers:
      - name: user-api-con
        image: 760135347993.dkr.ecr.ap-northeast-2.amazonaws.com/user:10
        ports:
        - containerPort: 8080 
---
apiVersion: v1
kind: Service
metadata:
  name: profile-api-svc
spec:
  selector:
    app: profile-api
  ports:
  - port: 8081
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-api-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: profile-api
  template:
    metadata:
      name: profile-api-pod
      labels:
        app: profile-api
    spec:
      containers:
      - name: profile-api-con
        image: 760135347993.dkr.ecr.ap-northeast-2.amazonaws.com/profile:10
        ports:
        - containerPort: 8081
